--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -28,6 +28,10 @@
         @include responsive(small) {
             display: block;
         }
+
+        svg {
+            color: red;
+        }
     }
 
     &-title {
