--- a/src/styles/layout/_work.scss
+++ b/src/styles/layout/_work.scss
@@ -4,7 +4,8 @@
 
     &-decoration {
         position: absolute;
-        width: 110vw;
+        width: 100vw;
+        overflow: hidden;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
@@ -13,6 +14,10 @@
 
         @include responsive(small) {
             display: block;
+        }
+
+        #svg {
+            width: 110vw;
         }
     }
 
